--- a/Fandango.ipynb
+++ b/Fandango.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Capstone Project\n",
+    "# Fandango Project\n",
     "\n",
     "Copyright by Pierian Data Inc.\n",
     "For more information, visit at www.pieriandata.com\n",
